# void-proto

./: Cargo.toml  README.md  build.rs
proto/tendermint/consensus/: types.proto  wal.proto
proto/tendermint/crypto/: keys.proto  proof.proto
proto/tendermint/state/: types.proto
proto/tendermint/types/: block.proto  canonical.proto  evidence.proto  params.proto  types.proto  validator.proto
proto/tendermint/version/: types.proto
src/: lib.rs
