[package]
name = "void_proto"
version = "0.1.0"
authors = ["sajeevan opensource <sajeevanjspy@gmail.com>"]
edition = "2024"
description = "void-proto is the Protobuf definitions package for the void-caster blockchain"
readme = "README.md"
repository = "https://github.com/sajeevanjspy/void-proto.git"
license = "MIT"
publish = false

[dependencies]
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
prost-build = "0.14"
